[package]
name = "erc721-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version = "0.0.0"

[dependencies]
openzeppelin-stylus = { path = "../../contracts", features = [
  "erc721_burnable",
  "erc721_enumerable",
  "erc721_metadata",
  "erc721_pausable",
  "erc721_uri_storage",
] }
alloy-primitives.workspace = true
stylus-sdk.workspace = true
stylus-proc.workspace = true
mini-alloc.workspace = true

[dev-dependencies]
alloy.workspace = true
e2e = { path = "../../lib/e2e" }
tokio.workspace = true
eyre.workspace = true
rand.workspace = true

[features]
default = []
e2e = []

[lib]
crate-type = ["lib", "cdylib"]

