[package]
name = "erc721-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[dependencies]
openzeppelin-stylus.workspace = true
alloy-primitives.workspace = true
stylus-sdk.workspace = true

[dev-dependencies]
alloy.workspace = true
e2e.workspace = true
tokio.workspace = true
eyre.workspace = true
rand.workspace = true

[features]
e2e = []
export-abi = ["openzeppelin-stylus/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "erc721-example"
path = "src/main.rs"
