[package]
name = "merkle-proofs-example"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/rust-contracts-stylus"
publish = false
version = "0.0.0"

[dependencies]
openzeppelin-crypto = { path = "../../lib/crypto" }
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
    "tiny-keccak",
] }
alloy-sol-types = { version = "=0.8.20", default-features = false }
stylus-sdk = { git = "https://github.com/OffchainLabs/stylus-sdk-rs.git", rev = "b7310ef", default-features = false, features = [
    "mini-alloc",
] }

[features]
# Enables using the standard library. This is not included in the default
# features, because this crate is meant to be used in a `no_std` environment.
# Currently, the std feature is only used for testing purposes.
std = []
e2e = []
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "merkle-proofs-example"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false
